; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/shell32/extr_ebrowser.c_ebrowser_browse_to_desktop.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/shell32/extr_ebrowser.c_ebrowser_browse_to_desktop.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@hwnd = common dso_local global i32 0, align 4
@CSIDL_DESKTOP = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @ebrowser_browse_to_desktop to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ebrowser_browse_to_desktop(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32* %0, i32** %2, align 8
  %5 = load i32, i32* @hwnd, align 4
  %6 = load i32, i32* @CSIDL_DESKTOP, align 4
  %7 = call i32 @SHGetSpecialFolderLocation(i32 %5, i32 %6, i32* %3)
  %8 = load i32*, i32** %2, align 8
  %9 = load i32, i32* %3, align 4
  %10 = call i32 @IExplorerBrowser_BrowseToIDList(i32* %8, i32 %9, i32 0)
  store i32 %10, i32* %4, align 4
  %11 = load i32, i32* %3, align 4
  %12 = call i32 @ILFree(i32 %11)
  %13 = load i32, i32* %4, align 4
  ret i32 %13
}

declare dso_local i32 @SHGetSpecialFolderLocation(i32, i32, i32*) #1

declare dso_local i32 @IExplorerBrowser_BrowseToIDList(i32*, i32, i32) #1

declare dso_local i32 @ILFree(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
